gateway/envoy-config.yaml
overload_manager:
  refresh_interval: 0.25s
  resource_monitors:
  - name: "envoy.resource_monitors.fixed_heap"
    typed_config:
      "@type": type.googleapis.com/envoy.extensions.resource_monitors.fixed_heap.v3.FixedHeapConfig
      max_heap_size_bytes: 2147483648  # 2 GiB
  actions:
  - name: "envoy.overload_actions.shrink_heap"
    triggers:
    - name: "envoy.resource_monitors.fixed_heap"
      threshold:
        value: 0.95
  - name: "envoy.overload_actions.stop_accepting_requests"
    triggers:
    - name: "envoy.resource_monitors.fixed_heap"
      threshold:
        value: 0.98
admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9900

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                stream_idle_timeout: 60s
                request_timeout: 60s
                path_with_escaped_slashes_action: UNESCAPE_AND_REDIRECT
                http_filters:
                - name: envoy.filters.http.router
                route_config:
                  name: local_route
                  virtual_hosts:
                  - name: local_service
                    domains: ["*"]
                    routes:
                    - match:
                        prefix: "/"
                      route:
                      # host_rewrite: www.google.com
                        cluster: store_service
                    - match:
                        prefix: "/stores"
                      route:
                      # host_rewrite: www.google.com
                        cluster: store_service
                    retry_policy:
                      retry_on: "5xx"
                      num_retries: 3
                      per_try_timeout: 10s
                      per_try_idle_timeout: 10s 

  clusters:
    - name: store_service
      connect_timeout: 0.5s
      type: strict_dns
      lb_policy: ROUND_ROBIN
      circuit_breakers:
        thresholds:
          max_connections: 1024
          max_pending_requests: 5
          max_requests: 5
          max_retries: 3
      load_assignment:
        cluster_name: store_service
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: store
                  port_value: 9000
